--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="sec-side text-center">
                 <div class="content">
-                    <img src="https://via.placeholder.com/150">
+                    <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 150px; height: 150px;">
                     <h1>Ramy Ayman</h1>
                     <p>iOS Developer</p>
                     <ul>
@@ -47,13 +47,26 @@
             </div>
     </section>
 
-
-<div class="main">
-  <h2>Sidebar Dropdown</h2>
-  <p>Click on the dropdown button to open the dropdown menu inside the side navigation.</p>
-  <p>This sidebar is of full height (100%) and always shown.</p>
-  <p>Some random text..</p>
-</div>
+    <section class="main">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-xl-5 text-center pic">
+                    <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 300px; height: 300px;">
+                </div>
+                <div class="col-md-4 text">
+                    <h4>iOS Developer</h4>
+                    <h1>Ramy Ayman</h1>
+                    <p>Passionate iOS Developer, loves to build mobile apps, growing in clean
+                    code writing and using architectural and design patterns to provide
+                    robust software</p>
+                    <div class="bt-two">
+                        <a class="btn-one" href="https://github.com/ramysabry22/Cv/raw/master/CV/Ramy_Sabry_iOS_Developer_CV.pdf">Download CV</a>
+                        <a class="btn-two" href="https://github.com/ramysabry22/Cv/raw/master/CV/Ramy_Sabry_iOS_Developer_CV.pdf">Contact</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/style.js"></script>
