--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <h1>Ramy Ayman</h1>
                     <p>iOS Developer</p>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/ramy-aiman-sabry-153770117/"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="https://www.facebook.com/profile.php?id=100008612291509"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="https://github.com/ramysabry22"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/ramy-aiman-sabry-153770117/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=100008612291509" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://github.com/ramysabry22" target="_blank"><i class="fab fa-github"></i></a></li>
                     </ul>
                     <div class="bt"><button class="btn"><a href="https://github.com/ramysabry22/Cv/raw/master/CV/Ramy_Sabry_iOS_Developer_CV.pdf">Download CV</a></button></div>
                     <div class="footer"><p>&copy; 2020 All rights reserved</p></div>
