--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="first-side">
               <a href="#about" class="add"><i class=" active fas fa-user-alt"></i>About Me</a>
                 <hr>
-              <a href="#services"><i class="fas fa-briefcase"></i>Work Samples</a>
+              <a href="#services" class="work"><i class="fas fa-briefcase"></i>Work Samples</a>
                 <hr>
               <a href="#clients"><i class="fas fa-graduation-cap"></i>CV</a>
                 <hr>
@@ -48,7 +48,7 @@
     </section>
 
     <section class="main">
-        <div class="main-page-one wow bounceInUp" data-wow-duration="2s">
+        <div class="main-page wow bounceInUp" data-wow-duration="2s">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 text-center pic">
@@ -68,6 +68,23 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="work-examples wow bounceInUp hidden" data-wow-duration="2s">
+            <h1 class="">Work Examples</h1>
+            <div class="work">
+                <h2>Work</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                <video width="100%" controls>
+                <source src="img/sbs.mp4" type="video/mp4">
+                <source src="img/sbs.mp4" type="video/ogg">
+                </video>
+                <h2>Work</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                <video width="100%" controls>
+                <source src="img/sbs.mp4" type="video/mp4">
+                <source src="img/sbs.mp4" type="video/ogg">
+                </video>
+            </div>
     </section>
     <script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
