--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
 
 </head>
 <body>
+<nav class="navbar navbar-default hidden-md hidden-lg">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <a class="navbar-brand" href="#">Ramy Ayman</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about" class="add">About Me</a></li>
+        <li><a href="#services" class="work">Work Samples</a></li>
+          <li><a href="#clients">CV</a></li>
+          <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
     <section class="sidenav hidden-xs">
             <div class="first-side">
               <a href="#about" class="add"><i class=" active fas fa-user-alt"></i>About Me</a>
