--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section class="main">
-        <div class="main-page">
+        <div class="main-page" data-wow-duration="2s">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 text-center pic">
@@ -111,7 +111,7 @@
     <section class="cv wow zoomInUp hidden" data-wow-duration="2s">
         <embed src="cv/Ramy_Sabry_iOS_Developer_CV.pdf" width="100%" height="750px;" />
     </section>
-    <section class="contact wow fadeInRightBig hidden" data-wow-duration="2s">
+    <section class="contact wow flipInX hidden" data-wow-duration="2s">
         <h1>Contact</h1>
         <div class="row edit">
                 <div class="col-md-4 col-xl-4 col-xs-12 card">
