--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <section class="cv wow zoomInUp hidden" data-wow-duration="2s">
         <embed src="cv/Ramy_Sabry_iOS_Developer_CV.pdf" width="100%" height="750px;" />
     </section>
-    <section class="contact wow flipInX hidden" data-wow-duration="2s">
+    <section class="contact wow bounceInDown hidden" data-wow-duration="2s">
         <h1>Contact</h1>
         <div class="row edit">
                 <div class="col-md-4 col-xl-4 col-xs-12 card">
