--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about" class="me">About Me</a></li>
-        <li><a href="#services" class="work">Work Samples</a></li>
+        <li><a href="#services" class="work">Projects</a></li>
           <li><a href="#clients" class="cv-cv">CV</a></li>
           <li><a href="#contact" class="contact-c">Contact</a></li>
       </ul>
@@ -46,7 +46,7 @@
             <div class="first-side">
               <a href="#about" class="me"><i class=" active fas fa-user-alt"></i>About Me</a>
                 <hr>
-              <a href="#services" class="work"><i class="fas fa-briefcase"></i>Work Samples</a>
+              <a href="#services" class="work"><i class="fas fa-briefcase"></i>Projects</a>
                 <hr>
               <a href="#clients" class="cv-cv"><i class="fas fa-graduation-cap"></i>CV</a>
                 <hr>
