--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about" class="me">About Me</a></li>
-        <li><a href="#services" class="work">Projects</a></li>
-          <li><a href="#clients" class="cv-cv">CV</a></li>
-          <li><a href="#contact" class="contact-c">Contact</a></li>
+        <li><a href="#" class="me">About Me</a></li>
+        <li><a href="#" class="work">Projects</a></li>
+          <li><a href="#" class="cv-cv">CV</a></li>
+          <li><a href="#" class="contact-c">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
     <section class="sidenav hidden-xs">
             <div class="first-side">
-              <a href="#about" class="me"><i class=" active fas fa-user-alt"></i>About Me</a>
+              <a href="#" class="me"><i class=" active fas fa-user-alt"></i>About Me</a>
                 <hr>
-              <a href="#services" class="work"><i class="fas fa-briefcase"></i>Projects</a>
+              <a href="#" class="work"><i class="fas fa-briefcase"></i>Projects</a>
                 <hr>
-              <a href="#clients" class="cv-cv"><i class="fas fa-graduation-cap"></i>CV</a>
+              <a href="#" class="cv-cv"><i class="fas fa-graduation-cap"></i>CV</a>
                 <hr>
-              <a href="#contact" class="contact-c"><i class="far fa-envelope"></i>Contact</a>
+              <a href="#" class="contact-c"><i class="far fa-envelope"></i>Contact</a>
                 <hr>
             </div>
             <div class="sec-side text-center">
@@ -110,9 +110,12 @@
     </section>
     <section class="cv wow zoomInUp hidden" data-wow-duration="2s">
 <!--        <embed src="cv/Ramy_Sabry_iOS_Developer_CV.pdf" width="100%" height="750px;" />-->
+<!--
         <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="100%" height="750px;">
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
+-->
+        <embed src="http://www.africau.edu/images/default/sample.pdf" width="500" height="375">
     </section>
     <section class="contact wow bounceInDown hidden" data-wow-duration="2s">
         <h1>Contact</h1>
