--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
 -->
-        <embed src="http://www.africau.edu/images/default/sample.pdf" width="500" height="375">
+    <iframe src="CV/Ramy_Sabry_iOS_Developer_CV.pdf" 
+style="width:600px; height:500px;" frameborder="0"></iframe>
     </section>
     <section class="contact wow bounceInDown hidden" data-wow-duration="2s">
         <h1>Contact</h1>
