--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
 -->
-    <iframe src="cv/Ramy_Sabry_iOS_Developer_CV.pdf" 
-style="width:600px; height:500px;" frameborder="0"></iframe>
+    <iframe src="cv/Ramy_Sabry_iOS_Developer_CV.pdf">
+</iframe>
     </section>
     <section class="contact wow bounceInDown hidden" data-wow-duration="2s">
         <h1>Contact</h1>
