--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
 -->
-    <iframe src="cv/Ramy_Sabry_iOS_Developer_CV.pdf">
-</iframe>
+        <iframe src="https://www.example.com" width="100%" height="750px;">
+        </iframe>
     </section>
     <section class="contact wow bounceInDown hidden" data-wow-duration="2s">
         <h1>Contact</h1>
