--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="me">About Me</a></li>
         <li><a href="#" class="work">Projects</a></li>
-          <li><a href="#" class="cv-cv">CV</a></li>
+          <li><a href="#" class="cv-cv hidden-xs">CV</a></li>
           <li><a href="#" class="contact-c">Contact</a></li>
       </ul>
     </div>
@@ -48,7 +48,7 @@
                 <hr>
               <a href="#" class="work"><i class="fas fa-briefcase"></i>Projects</a>
                 <hr>
-              <a href="#" class="cv-cv"><i class="fas fa-graduation-cap"></i>CV</a>
+              <a href="#" class="cv-cv hidden-xs"><i class="fas fa-graduation-cap"></i>CV</a>
                 <hr>
               <a href="#" class="contact-c"><i class="far fa-envelope"></i>Contact</a>
                 <hr>
@@ -108,7 +108,7 @@
                 </video>
             </div>
     </section>
-    <section class="cv wow zoomInUp hidden" data-wow-duration="2s">
+    <section class="cv wow zoomInUp hidden hidden-xs" data-wow-duration="2s">
         <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="100%" height="750px;">
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
