--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 </nav>
     <section class="sidenav hidden-xs">
             <div class="first-side">
-              <a href="#" class="me"><i class=" active fas fa-user-alt"></i>About Me</a>
+            <a href="#" class="me"><i class=" active fas fa-user-alt"></i><p>About Me</p></a> 
                 <hr>
-              <a href="#" class="work"><i class="fas fa-briefcase"></i>Projects</a>
+               <a href="#" class="work"><i class="fas fa-briefcase"></i><p>Projects</p> </a>
                 <hr>
-              <a href="#" class="cv-cv hidden-xs"><i class="fas fa-graduation-cap"></i>CV</a>
+              <a href="#" class="cv-cv hidden-xs"><i class="fas fa-graduation-cap"></i><p>CV</p></a>
                 <hr>
-              <a href="#" class="contact-c"><i class="far fa-envelope"></i>Contact</a>
+              <a href="#" class="contact-c"><i class="far fa-envelope"></i><p>Contact</p></a>
                 <hr>
             </div>
             <div class="sec-side text-center">
@@ -73,8 +73,8 @@
         <div class="main-page" data-wow-duration="2s">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-5 col-xl-5 text-center pic">
-                        <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 300px; height: 300px;">
+                    <div class="col-md-5 col-xl-5 pic">
+                        <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 350px; height: 350px;">
                     </div>
                     <div class="col-md-4 text" >
                         <h4>iOS Developer</h4>
@@ -84,15 +84,15 @@
                         robust software</p>
                         <div class="bt-two">
                             <a class="btn-one" href="https://github.com/ramysabry22/Cv/raw/master/CV/Ramy_Sabry_iOS_Developer_CV.pdf">Download CV</a>
-                            <a class="btn-two" href="https://github.com/ramysabry22/Cv/raw/master/CV/Ramy_Sabry_iOS_Developer_CV.pdf">Contact</a>
+                            <a class="btn-two contact-c" href="#">Contact</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="work-examples wow bounceInUp hidden" data-wow-duration="2s">
-            <h1 class="">Work Examples</h1>
+    <section class="work-examples hidden" data-wow-duration="2s">
+            <h1 class="m">Work Examples</h1>
             <div class="work">
                 <h2>Work</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
@@ -108,13 +108,14 @@
                 </video>
             </div>
     </section>
-    <section class="cv wow zoomInUp hidden hidden-xs" data-wow-duration="2s">
-        <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="100%" height="750px;">
+    <section class="cv hidden hidden-xs" data-wow-duration="2s">
+        <h1 class="m">CV</h1>
+        <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="98%" height="650px;">
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
     </section>
-    <section class="contact wow bounceInDown hidden" data-wow-duration="2s">
-        <h1>Contact</h1>
+    <section class="contact hidden" data-wow-duration="2s">
+        <h1 class="m">Contact</h1>
         <div class="row edit">
                 <div class="col-md-4 col-xl-4 col-xs-12 card">
                     <i class="fas fa-map-marker-alt"></i>
