--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
     </section>
     <section class="cv hidden hidden-xs" data-wow-duration="2s">
-        <h1 class="m">CV</h1>
+        <h1 class="m-s">CV</h1>
         <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="98%" height="650px;">
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
