--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </section>
     <section class="cv hidden hidden-xs" data-wow-duration="2s">
         <h1 class="m-s">CV</h1>
-        <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="98%" height="650px;">
+        <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="98%" height="650px;" id="object">
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
     </section>
