--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section class="main">
-        <div class="main-page" data-wow-duration="2s">
+        <div class="main-page wow slideInRight" data-wow-duration="1s">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 pic">
@@ -91,7 +91,7 @@
             </div>
         </div>
     </section>
-    <section class="work-examples hidden" data-wow-duration="2s">
+    <section class="work-examples hidden wow slideInRight" data-wow-duration="1s">
             <h1 class="m">Work Examples</h1>
             <div class="work">
                 <h2>Work</h2>
@@ -108,13 +108,13 @@
                 </video>
             </div>
     </section>
-    <section class="cv hidden hidden-xs" data-wow-duration="2s">
+    <section class="cv hidden hidden-xs wow slideInRight" data-wow-duration="1s">
         <h1 class="m-s">CV</h1>
         <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="98%" height="650px;" id="object">
             <p>Oops! Your browser doesn't support PDFs!</p>
         </object>
     </section>
-    <section class="contact hidden" data-wow-duration="2s">
+    <section class="contact hidden wow slideInRight" data-wow-duration="1s">
         <h1 class="m">Contact</h1>
         <div class="row edit">
                 <div class="col-md-4 col-xl-4 col-xs-12 card">
