--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                <a href="#" class="work"><i class="fas fa-briefcase"></i><p>Projects</p> </a>
                 <hr>
               <a href="#" class="cv-cv hidden-xs"><i class="fas fa-graduation-cap"></i><p>CV</p></a>
-                <hr>
+                <hr class="hr">
               <a href="#" class="contact-c"><i class="far fa-envelope"></i><p>Contact</p></a>
                 <hr>
             </div>
