--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="sec-side text-center">
                 <div class="content">
-                    <img id="pic" src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 150px; height: 150px;">
+                    <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 150px; height: 150px;">
                     <h1>Ramy Ayman</h1>
                     <p>iOS Developer</p>
                     <ul>
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 pic">
-                        <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" >
+                        <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 350px; height: 350px;"/>
                     </div>
                     <div class="col-md-4 text" >
                         <h4>iOS Developer</h4>
