--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 pic">
-                        <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 350px; height: 350px;"/>
+                        <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg"/>
                     </div>
                     <div class="col-md-4 text" >
                         <h4>iOS Developer</h4>
