--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                         <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg"/>
                     </div>
                     <div class="col-md-4 text" >
-                        <h4>iOS Developer</h4>
+                        <h4 id="text-one">iOS Developer</h4>
+                        <h4 id="text-two" class="hidden">iPhone Apps</h4>
+                        <h4 id="text-three" class="hidden">iPad Apps</h4>
                         <h1>Ramy Ayman</h1>
                         <p>Passionate iOS Developer, loves to build mobile apps, growing in clean
                         code writing and using architectural and design patterns to provide
