--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="sidenav hidden-xs">
             <div class="first-side">
             <a href="#" class="me">
-<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.1" class="active" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 482.9 482.9" style="enable-background:new #30353F;" xml:space="preserve" width="30px" height="30px">
 <g>
 	<g>
